--- a/backend/core/requirements.txt
+++ b/backend/core/requirements.txt
@@ -15,7 +15,7 @@ drf-spectacular-sidecar==2025.10.1
 gunicorn==23.0.0
 iniconfig==2.3.0
 packaging==25.0
-pillow==11.3.0
+
 pluggy==1.6.0
 pycparser==2.23
 Pygments==2.19.2
@@ -31,14 +31,14 @@ tzdata==2025.2
 uritemplate==4.2.0
 uv==0.8.22
 whitenoise==6.9.0
-Pillow==10.1.0
-psycopg2-binary==2.9.9
+ Pillow==10.4.0
+psycopg[binary]>=3.2.2,<3.3
 python-decouple==3.8
 celery==5.3.4
 redis==5.0.1
-django-celery-beat==2.5.0
+django-celery-beat==2.8.1
 boto3==1.29.7
 django-storages==1.14.2
-django-filter==23.5
+
 
 
