--- a/backend/core/requirements.txt
+++ b/backend/core/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.8.1
+certifi==2026.1.4
 cffi==2.0.0
+charset-normalizer==3.4.4
+cloudinary==1.44.1
 colorama==0.4.6
 coverage==7.11.0
 cryptography==46.0.1
 dj-database-url==3.0.1
 Django==5.2.6
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
 django-filter==25.1
 django-restframework==0.0.1
@@ -13,6 +17,7 @@ djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.8.5
 drf-spectacular-sidecar==2025.10.1
 gunicorn==23.0.0
+idna==3.11
 iniconfig==2.3.0
 packaging==25.0
 pillow==11.3.0
@@ -25,10 +30,13 @@ pytest==8.4.2
 pytest-asyncio==1.2.0
 python-dotenv==1.1.1
 PyYAML==6.0.3
+requests==2.32.5
 rest-framework-simplejwt==0.0.2
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
+urllib3==2.6.3
 uv==0.8.22
 whitenoise==6.9.0
