--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Backend Dependencies
         run: |
-          cd backend
+          cd backend/core
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
