--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npm run lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -82,4 +83,5 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
   }
+  
 }
