--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "npm run lint"
+    "test": "echo \"No tests specified yet\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
